<resources>
    <string name="app_name">CreDiscountGo</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="filter_creditCardHeading">Credit Card</string>
    <string name="filter_catHeading">Shops</string>

    <string name="cc_HSBCV">HSBC VISA</string>
    <string name="cc_AE">AE</string>
    <string name="cc_DBSMC">DBS Mastercard</string>
    <string name="s_shop">Shops</string>
    <string name="s_dining">Dining</string>
    <string name="filterHeading">Apply Filter</string>

    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="surprise_tips">Tips:</string>
    <string name="tips_message">Click the chest to unlock!</string>
    <string name="congrats">Congratulations!</string>
    <string name="won">You\'ve won a prize!</string>
    <string name="click_for_details">Click to view more details</string>
    <string name="discount_message">50% off Movie Ticket Discount!</string>
    <string name="discount_title">Discount title</string>
    <string name="partnership">partners</string>
    <string name="default_notification_channel_id">channelID</string>
    <string name="friend_list_title">Friends</string>
    <string name="credit_cards">Credit Cards</string>
    <string name="wallet">Wallet</string>
    <string name="characteristics">Characteristics</string>
</resources>
