<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filterLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:elevation="20dp"
    android:padding="5dip"

    android:background="@android:color/white">

    <RadioGroup
        android:id="@+id/radioGCreditCard"
        android:layout_width="242dp"
        android:layout_height="86dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbox_c1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cc_DBSMC"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/cbox_c2"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:text="@string/cc_HSBCV"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbox_c3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cc_AE"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGShops"
        android:layout_width="243dp"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbox_s1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_dining"
                android:textColor="@android:color/black" />

            <CheckBox
                android:id="@+id/cbox_s2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/s_shop"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </RadioGroup>

    <Button
        android:id="@+id/filterOK"
        android:layout_width="55dp"
        android:layout_height="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"

        android:text="OK"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGShops" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="71dp"
        android:layout_height="22dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:text="Category"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGCreditCard" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/filter_creditCardHeading"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.011"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/filterHeading"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/Divider"
        android:layout_width="238dp"
        android:layout_height="1dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />



</android.support.constraint.ConstraintLayout>