<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".UserProfile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="350dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:background="@drawable/profile_header_background"
                    android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/cartoon_guy_small" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:text="Cost Saving Boy"
                        android:textColor="#FFF"
                        android:textSize="30sp" />

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="250dp"
                    android:layout_height="100dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="220dp"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="Level"
                                android:textColor="#000"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:text="7"
                                android:textColor="#000"
                                android:textSize="25dp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="Exp"
                                android:textColor="#000"
                                android:textSize="20dp" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="5dp"
                                android:text="1024"
                                android:textColor="#000"
                                android:textSize="25dp" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </RelativeLayout>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/characteristics"
                android:textSize="20dp"/>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RelativeLayout
                                android:layout_margin="2dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chip_shape"
                                android:paddingBottom="12dp"
                                android:paddingTop="12dp">

                            <TextView
                                android:id="@+id/tag_text1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingLeft="12dp"
                                android:text="Price Elastic"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/tag_text1"
                                android:contentDescription="@null"
                                android:padding="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/ic_highlight_off_black_24dp" />
                        </RelativeLayout>

                            <RelativeLayout
                                android:layout_margin="2dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chip_shape"
                                android:paddingBottom="12dp"
                                android:paddingTop="12dp">

                            <TextView
                                android:id="@+id/tag_text2"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingLeft="12dp"
                                android:text="Love Saving"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/tag_text2"
                                android:contentDescription="@null"
                                android:padding="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/ic_highlight_off_black_24dp" />
                        </RelativeLayout>

                            <RelativeLayout
                                android:layout_margin="2dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chip_shape"
                                android:paddingBottom="12dp"
                                android:paddingTop="12dp">

                            <TextView
                                android:id="@+id/tag_text3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingLeft="12dp"
                                android:text="Game Lover"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/tag_text3"
                                android:contentDescription="@null"
                                android:padding="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/ic_highlight_off_black_24dp" />
                        </RelativeLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_gravity="center"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <RelativeLayout
                                android:layout_margin="2dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chip_shape"
                                android:paddingBottom="12dp"
                                android:paddingTop="12dp">

                            <TextView
                                android:id="@+id/tag_text4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingLeft="12dp"
                                android:text="Dok Suk"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/tag_text4"
                                android:contentDescription="@null"
                                android:padding="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/ic_highlight_off_black_24dp" />
                        </RelativeLayout>

                            <RelativeLayout
                                android:layout_margin="2dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:background="@drawable/chip_shape"
                                android:paddingBottom="12dp"
                                android:paddingTop="12dp">

                            <TextView
                                android:id="@+id/tag_text5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:paddingLeft="12dp"
                                android:text="Discount Radar"
                                android:textStyle="bold" />

                            <ImageView
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:layout_centerVertical="true"
                                android:layout_toRightOf="@id/tag_text5"
                                android:contentDescription="@null"
                                android:padding="4dp"
                                android:layout_marginRight="4dp"
                                android:layout_marginLeft="4dp"
                                android:src="@drawable/ic_highlight_off_black_24dp" />
                        </RelativeLayout>

                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/credit_cards"
                android:textSize="20dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="10dp"
                android:id="@+id/credit_card_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/darker_gray"
                android:text="@string/wallet"
                android:textSize="20dp"/>

            <android.support.v7.widget.RecyclerView
                android:layout_marginTop="5dp"
                android:id="@+id/wallet_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>

        </LinearLayout>

    </ScrollView>


